# anthropic_demo

./: .gitignore  How we built our multi-agent research system \ Anthropic.html  How we built our multi-agent research system.md  README.md  test_system.py
.windsurf/rules/: demonstratebuilder.md
backend/: pyproject.toml  start.sh
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  citation.py  evaluator.py  lead_researcher.py  subagent.py
backend/app/api/: routes.py
backend/app/core/: __init__.py  settings.py
backend/app/llm/: __init__.py  client.py
backend/app/models/: __init__.py  enums.py  events.py  run.py
backend/app/services/: __init__.py  event_bus.py  run_store.py
backend/app/static/: index.html
backend/app/static/assets/: index-DjU4EOOX.css
backend/app/tools/: __init__.py  search.py
backend/app/utils/: __init__.py  json_parser.py
backend/multi_agent_research_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  styles.css  types.ts
