[project]
name = "multi-agent-research-demo"
version = "0.1.0"
description = "Demonstration backend for the multi-agent research system inspired by Anthropic's architecture."
authors = ["Cascade AI <cascade@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.115",
    "uvicorn[standard]~=0.30",
    "httpx~=0.27",
    "pydantic~=2.7",
    "pydantic-settings~=2.4",
    "python-dotenv~=1.0",
    "rich~=13.7",
    "anyio~=4.4",
    "tavily~=0.3"
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3",
    "pytest-asyncio~=0.23"
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
